logs/offboard_pkg/build.make.303.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘mavros_msgs::GlobalPositionTarget TaskManager::get_lla_line(Eigen::Vector3d&, double)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:126:8: error: ‘change_yaw’ was not declared in this scope
  126 |     if(change_yaw && i!=1)
      |        ^~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:126:22: error: ‘i’ was not declared in this scope
  126 |     if(change_yaw && i!=1)
      |                      ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
